objects/NCS_MI_Contact__c.object
<CustomObject>
    <description>For NCS MI reporting</description>
    <fields>
        <fullName>Age_on_31_Aug_of_campaign_year__c</fullName>
        <description>Calculates age on 31 August of campaign year. Currently set for 2016</description>
        <formula>IF( 
MONTH(X31_August_current_year__c )&gt;MONTH(  Inclusion_Detail__r.Contact__r.Birthdate  ), 
YEAR(X31_August_current_year__c )-YEAR( Inclusion_Detail__r.Contact__r.Birthdate ), 
IF(AND(MONTH(X31_August_current_year__c ) = MONTH( Inclusion_Detail__r.Contact__r.Birthdate ), DAY(X31_August_current_year__c ) &gt;= DAY( Inclusion_Detail__r.Contact__r.Birthdate )), 
YEAR(X31_August_current_year__c )-YEAR( Inclusion_Detail__r.Contact__r.Birthdate ), 
(YEAR(X31_August_current_year__c )-YEAR( Inclusion_Detail__r.Contact__r.Birthdate ))-1) 
)</formula>
        <inlineHelpText>Calculates age on 31 August of campaign year. Currently set for 2016</inlineHelpText>
        <label>Age on 31 Aug of campaign year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <description>Brings down the amount paid by the YP from their contact record</description>
        <formula>Inclusion_Detail__r.Contact__r.Total_payment_received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <description>For NCS report. Should always stay blank</description>
        <label>Amount Refunded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_deposit_paid__c</fullName>
        <description>For NCS report. Should always stay blank</description>
        <label>Amount deposit paid</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autistic_spectrum_disorder_asperger_synd__c</fullName>
        <description>Translates our P3 information into a binary answer for NCS upload.</description>
        <formula>&quot;Formula deleted as related to old P3 fields&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autistic spectrum disorder/asperger synd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blind_or_Partially_Sighted__c</fullName>
        <description>Translates our P3 information into a binary answer for NCS upload.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blind or Partially Sighted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent__c</fullName>
        <description>Data sharing consent. Always populated with &apos;1&apos; as young people are exposed to the sharing policy whenever they express interest.</description>
        <formula>1</formula>
        <label>Consent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Source_New__c</fullName>
        <formula>IF( ISBLANK( Inclusion_Detail__r.Contact__r.SFDC_Concact_ID_From_Trust__c ),&quot;Provider&quot;,Inclusion_Detail__r.Contact__r.SFDC_Concact_ID_From_Trust__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Source New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_created_date_time__c</fullName>
        <description>Date-time of Contact creation, using &apos;Created Date&apos; field</description>
        <formula>Inclusion_Detail__r.Contact__r.CreatedDate</formula>
        <inlineHelpText>Date-time of Contact creation</inlineHelpText>
        <label>Contact created date-time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_source__c</fullName>
        <description>Source of the contact. Defaulted as &apos;provider&apos;</description>
        <inlineHelpText>Source of the contact. Defaulted as &apos;provider&apos;</inlineHelpText>
        <label>Contact source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Central FB</fullName>
                </value>
                <value>
                    <fullName>Central web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation__c</fullName>
        <label>Creation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criminal_record_real_target__c</fullName>
        <label>Criminal record &apos;real&apos; target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deaf_or_hearing_impaired__c</fullName>
        <description>Translates our P3 information into a binary answer for NCS upload.</description>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c),&quot;&quot;,IF(INCLUDES( Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c ,&quot;No&quot;),&quot;No&quot;,IF(OR(INCLUDES( Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c ,&quot;Yes, mild hearing impairment&quot;),INCLUDES( Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c ,&quot;Yes, moderate hearing impairment&quot;),INCLUDES( Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c ,&quot;Yes, severe hearing impairment&quot;),INCLUDES( Inclusion_Detail__r.Contact__r.Severe_hearing_or_visual_impairment__c ,&quot;Yes, profound hearing impairment&quot;)),&quot;Yes&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deaf or hearing impaired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_out_reason__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drop out reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOI_received__c</fullName>
        <formula>DATEVALUE( Inclusion_Detail__r.Contact__r.CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOI received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Target__c</fullName>
        <description>This stores the ethnicity targets for the YPs from the individual LAs</description>
        <label>Ethnicity Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>This amends our limited ethnicity pickvals to the more specific ones used for NCS reporting</description>
        <formula>IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;White&quot;) , &quot;Any other White background&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Black&quot;) , &quot;Any other Black background&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Asian&quot;) , &quot;Any other Asian background&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Other&quot;) , &quot;Any other ethnic group&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Mixed&quot;) , &quot;Any other Mixed background&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Gypsy/ Roma&quot;) , &quot;Gypsy/Roma&quot; ,
IF( ISPICKVAL( Inclusion_Detail__r.Ethnicity__c , &quot;Black Carribbean&quot;) , &quot;Black Caribbean&quot; ,


TEXT(Inclusion_Detail__r.Ethnicity__c))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity_real_targetA__c</fullName>
        <label>Ethnicity &apos;real&apos; target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity_real_target_del__c</fullName>
        <formula>Ethnicity_Target__c *354</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethnicity &apos;real&apos; target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSM_Target__c</fullName>
        <label>FSM Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSM_real_target__c</fullName>
        <label>FSM &apos;real&apos; target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faith_Religion__c</fullName>
        <description>This converts our blank faith/religion to &apos;none&apos; were necessary.</description>
        <formula>IF(ISBLANK(TEXT( Inclusion_Detail__r.Faith_Religion__c )),&quot;None&quot;,TEXT( Inclusion_Detail__r.Faith_Religion__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faith/Religion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Programme_Started__c</fullName>
        <label>First Programme Started</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_school_meals__c</fullName>
        <description>This converts our FSM response the relevant NCS MI value .</description>
        <formula>IF(ISPICKVAL(Inclusion_Detail__r.Free_school_meals__c,&quot;Unsure&quot;), &quot;0&quot;, 
IF(ISPICKVAL(Inclusion_Detail__r.Free_school_meals__c,&quot;Yes&quot;),&quot;1&quot;,&quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free school meals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Consent_EOI__c</fullName>
        <description>This works out the date that we receive a YPs consent</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Consent EOI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This pulls down the gender from the YPs contact record.</description>
        <formula>TEXT(Inclusion_Detail__r.Contact__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grad_hours__c</fullName>
        <formula>IF((Inclusion_Detail__r.Contact__r.Total_hours_submitted__c - Inclusion_Detail__r.Contact__r.Total_hours_to_make_up_for_grad_C_O__c) &lt; 1,0,Inclusion_Detail__r.Contact__r.Total_hours_submitted__c - Inclusion_Detail__r.Contact__r.Total_hours_to_make_up_for_grad_C_O__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grad hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Graduation_key__c =&quot;Graduated&quot;, &quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Status__c</fullName>
        <description>This is a manual upload to show whether a YP has &apos;graduated&apos; or not. Please note that this does not necessarily mean that the YP attended graduation.</description>
        <label>Graduation Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_of_offending_Target__c</fullName>
        <label>History of offending Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>History_of_offending__c</fullName>
        <description>This converts our criminal record response the relevant NCS MI value</description>
        <formula>IF(INCLUDES( Inclusion_Detail__r.Criminal_Justice_engagement__c ,&quot;Criminal Record&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>History of offending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear__c</fullName>
        <label>How did you first hear about NCS?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook/twitter/ social media</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Media article / programme</fullName>
                </value>
                <value>
                    <fullName>Advert</fullName>
                </value>
                <value>
                    <fullName>At school / college</fullName>
                </value>
                <value>
                    <fullName>Through youth group / organisation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM_Curevey_first_name__c</fullName>
        <description>Used only for Ipsis Mori Survey</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM Curevey first name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Care_real_target__c</fullName>
        <label>In Care &apos;real&apos; target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_or_recently_in_care__c</fullName>
        <description>This converts our In Care response the relevant NCS MI value</description>
        <formula>IF(ISPICKVAL(Inclusion_Detail__r.YP_in_or_recently_in_care__c,&quot;Yes&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In or recently in care</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_or_recently_in_care_target__c</fullName>
        <label>In or recently in care target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inclusion_Detail__c</fullName>
        <label>Inclusion Detail</label>
        <referenceTo>Inclusion_Details__c</referenceTo>
        <relationshipLabel>NCS MI Contacts</relationshipLabel>
        <relationshipName>NCS_MI_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interested_in_Autumn_New__c</fullName>
        <formula>IF(
OR(ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c ),ISBLANK(payment_recieved__c  ))
,


IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 

IF(OR( 
INCLUDES(Inclusion_Detail__r.Contact__r.Season__c,&quot;Feb 2015&quot;), 
Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Feb 2015&quot; 
) 
,&quot;1&quot;,&quot;0&quot;) 

, 

IF(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Autumn_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
), 
IF(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
)

,

IF( Interested_in_Summer_New__c = &quot;1&quot;,&quot;0&quot;,&quot;1&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Autumn New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Autumn_V3__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 



IF(ISBLANK(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c), 

IF(Inclusion_Detail__r.Contact__r.Withdrawn_From_Season__c = &quot;Autumn&quot;,&quot;1&quot;,&quot;0&quot;), 

IF(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Autumn 2015&quot;, &quot;1&quot;,&quot;0&quot;) 

)

, 

IF(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Autumn_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
), 
IF(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Autumn V3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Spring_New__c</fullName>
        <formula>IF(
OR(ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c),ISBLANK(payment_recieved__c  ))
,

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 

IF(OR( 
INCLUDES(Inclusion_Detail__r.Contact__r.Season__c,&quot;Feb 2015&quot;), 
Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Feb 2015&quot; 
) 
,&quot;1&quot;,&quot;0&quot;) 

, 

IF(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Spring_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
), 
IF(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
)

,

IF( Interested_in_Summer_New__c = &quot;1&quot;,&quot;0&quot;,

IF( Interested_in_Autumn_New__c = &quot;1&quot;,&quot;0&quot;,&quot;1&quot;)

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Spring New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Spring_V3__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c), 

IF(Inclusion_Detail__r.Contact__r.Withdrawn_From_Season__c = &quot;Spring&quot;,&quot;1&quot;,&quot;0&quot;), 

IF(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Spring 2015&quot;, &quot;1&quot;,&quot;0&quot;) 

), 

IF(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Spring_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
), 
IF(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE, &quot;1&quot;, &quot;0&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Spring V3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Summer_New__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 

IF(OR(
INCLUDES(Inclusion_Detail__r.Contact__r.Season__c,&quot;Summer 2015&quot;),
Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Summer 2015&quot;
)
,&quot;1&quot;,&quot;0&quot;)

, 

IF(
OR(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Autumn_wave__c = TRUE, 
Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Spring_wave__c = TRUE),
&quot;0&quot;, &quot;1&quot;)


),
IF(OR(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE,
Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE)
, &quot;0&quot;, &quot;1&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Summer New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Summer_V3__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 

IF(Contains(NCS_Primary_Season__c, &quot;Summer&quot;), &quot;1&quot;, &quot;0&quot;),

IF( 
OR(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Autumn_wave__c = TRUE, 
Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Spring_wave__c = TRUE), 
&quot;0&quot;, &quot;1&quot;)

), 
IF(OR(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, 
Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE) 
, &quot;0&quot;, &quot;1&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Summer V3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Summer_V3_archive__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c), 

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Reserved_Wave__c), 


IF(ISBLANK(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c), 

IF(Inclusion_Detail__r.Contact__r.Withdrawn_From_Season__c = &quot;Summer&quot;,&quot;1&quot;,&quot;0&quot;), 

IF(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c =&quot;Summer 2015&quot;, &quot;1&quot;,&quot;0&quot;) 

), 

IF( 
OR(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Autumn_wave__c = TRUE, 
Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Spring_wave__c = TRUE), 
&quot;0&quot;, &quot;1&quot;) 


), 
IF(OR(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, 
Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Spring_wave__c = TRUE) 
, &quot;0&quot;, &quot;1&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Summer V3 archive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_autumn__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>NO LONGER USED</description>
        <inlineHelpText>NO LONGER USED</inlineHelpText>
        <label>Interested in autumn</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_summer__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <description>NO LONGER USED</description>
        <inlineHelpText>NO LONGER USED</inlineHelpText>
        <label>Interested_in_summer</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ipsis_Mori_survey_ID__c</fullName>
        <description>This field gives the unique ID for the unique link for the Ipsis Mori EOI survey</description>
        <label>Ipsis Mori survey ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_modified_date__c</fullName>
        <formula>IF( 
AND(
LastModifiedDate &gt;  Inclusion_Detail__r.LastModifiedDate ,
LastModifiedDate &gt;  Inclusion_Detail__r.Contact__r.LastModifiedDate
),
LastModifiedDate,
IF(Inclusion_Detail__r.LastModifiedDate &gt; Inclusion_Detail__r.Contact__r.LastModifiedDate
,
Inclusion_Detail__r.LastModifiedDate,
Inclusion_Detail__r.Contact__r.LastModifiedDate
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last modified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <formula>IF(OR( Inclusion_Detail__r.Contact__r.District__c = &apos;Elmbridge&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Epsom and Ewell&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Guildford&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Mole Valley&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Reigate and Banstead&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Runnymede&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Spelthorne&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Surrey Heath&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Tandridge&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Waverley&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Woking&apos;),

&quot;Surrey&quot;,

IF(OR( Inclusion_Detail__r.Contact__r.District__c = &apos;North Warwickshire&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Warwick&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;South Warwickshire&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Nuneaton and Bedworth&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Rugby&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Stratford-Apon-Avon&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Stratford-on-Avon&apos;),

&quot;Warwickshire&quot;,

IF(OR(Inclusion_Detail__r.Contact__r.District__c = &apos;West Lancashire&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Preston&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Chorley&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Fylde&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Hyndburn&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Lancaster&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Pendle&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Ribble Valley&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Rossendale&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;South Ribble&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Wyre&apos;,
Inclusion_Detail__r.Contact__r.District__c = &apos;Burnley&apos;),

&apos;Lancashire&apos;,

IF(Inclusion_Detail__r.Contact__r.District__c = &apos;South Lakeland&apos;,

&apos;Cumbria&apos;,

IF(Inclusion_Detail__r.Contact__r.District__c = &apos;Craven&apos;,

&apos;North Yorkshire&apos;,

Inclusion_Detail__r.Contact__r.District__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Contact_ID__c</fullName>
        <formula>&quot;TCN&quot;&amp;Inclusion_Detail__r.Contact__r.TCNContactId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIS Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_health_difficulties__c</fullName>
        <formula>IF(ISBLANK(Inclusion_Detail__r.Contact__r.Nervous_illness_depression_pyschiatric__c),&quot;&quot;,IF(OR( INCLUDES(Inclusion_Detail__r.Contact__r.Nervous_illness_depression_pyschiatric__c , &quot;Yes, depression&quot;),INCLUDES(Inclusion_Detail__r.Contact__r.Nervous_illness_depression_pyschiatric__c , &quot;Yes, other mental health condition&quot;),INCLUDES(Inclusion_Detail__r.Contact__r.Nervous_illness_depression_pyschiatric__c , &quot;Yes, eating disorder&quot;)),&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mental health difficulties</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Contact_ID__c</fullName>
        <description>Formula creating NCS Contact ID (Provider ID + Salesforce&apos;s Contact ID)</description>
        <formula>Original_provider_ID__c  + Inclusion_Detail__r.Contact__r.SalesforceCID__c</formula>
        <inlineHelpText>NCS Contact ID (Provider ID + Salesforce&apos;s Contact ID)</inlineHelpText>
        <label>NCS Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Edubase_school_URN__c</fullName>
        <description>The YP&apos;s School&apos;s NCS Edubase URN</description>
        <formula>Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c</formula>
        <inlineHelpText>The YP&apos;s School&apos;s NCS Edubase URN</inlineHelpText>
        <label>NCS Edubase school URN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Edubase_school_borough__c</fullName>
        <description>School&apos;s NCS Edubase local authority</description>
        <formula>Inclusion_Detail__r.Contact__r.School__r.NCS_Local_Authority__c</formula>
        <inlineHelpText>School&apos;s NCS Edubase local authority</inlineHelpText>
        <label>NCS Edubase school borough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Primary_Season__c</fullName>
        <formula>IF( ISBLANK(Inclusion_Detail__r.Contact__r.Withdrawal_confirmed_by_Owner__c  ) , Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c, Inclusion_Detail__r.Contact__r.Primary_Season_Withdrawn__c )</formula>
        <label>NCS Primary Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Prime_ID__c</fullName>
        <description>Prime ID of the YP, calculated by a formula.</description>
        <formula>IF( ISBLANK(NCS_Prime_ID_override__c) ,

IF( NCS_Provider_ID__c = &quot;TCN&quot;,&quot;INS&quot;,&quot;TCN&quot;)

, NCS_Prime_ID_override__c )</formula>
        <inlineHelpText>Prime ID of the YP.</inlineHelpText>
        <label>NCS Prime ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Prime_ID_override__c</fullName>
        <description>Used for manual override of the NCS Prime ID field output as is incorporated into that formula, and displays when not blank.</description>
        <inlineHelpText>Data in this field replaces the usual value of the &apos;NCS Prime id&apos; field</inlineHelpText>
        <label>NCS Prime ID override</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Provider_ID__c</fullName>
        <description>Provider ID of the YP&apos;s School Provider</description>
        <formula>IF( ISBLANK( NCS_Provider_ID_override__c )

,IF(ISBLANK( Inclusion_Detail__r.Contact__r.NCS_Zone__c ),

 Inclusion_Detail__r.Contact__r.School__r.NCS_Provider_ID__c 

,

IF( Inclusion_Detail__r.Contact__r.NCS_Zone__c = &quot;TCN NW3&quot;,&quot;TCN&quot;,

IF(Inclusion_Detail__r.Contact__r.NCS_Zone__c = &quot;TCN ERROR&quot;,Inclusion_Detail__r.Contact__r.School__r.NCS_Provider_ID__c ,Inclusion_Detail__r.Contact__r.NCS_Zone__c)

)

)

, NCS_Provider_ID_override__c )</formula>
        <inlineHelpText>Provider ID of the YP&apos;s School Provider</inlineHelpText>
        <label>NCS Provider ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Provider_ID_override__c</fullName>
        <description>Entered text will be used to directly replace data in the NCS Provider ID field</description>
        <inlineHelpText>Entered text will update the NCS Provider ID field</inlineHelpText>
        <label>NCS Provider ID override</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_withdrawal_reason__c</fullName>
        <description>Formula, translating withdrawal reasons (from Contact) into NCS-specified withdrawal reasons</description>
        <formula>IF(ISBLANK( Inclusion_Detail__r.Contact__r.Withdrawal_confirmed_by_Owner__c ),NULL,

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Withdrawal_reason__c),&quot;Other&quot;,

IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Conflict with holiday&quot;) , &quot;Going on holiday&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Conflict with job&quot;) , &quot;Does not fit with job&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Conflicts with exam timetable&quot;) , &quot;Concerns about missing school / college / homework&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Conflict with other commitment&quot;) , &quot;Busy doing other things&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Does not want to attend&quot;) , &quot;Don&apos;t want to do it&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;We offered them a waiting list place&quot;) , &quot;Other&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;PG will not allow them to attend&quot;) , &quot;Other&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Unwell&quot;) , &quot;Sickness / injury&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Unknown or other reason&quot;) , &quot;Other&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Failed to show up at KO&quot;) , &quot;Other&quot;,
IF( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Not interested in TCS&quot;) , &quot;Don&apos;t want to do it&quot;,
IF ( INCLUDES( Inclusion_Detail__r.Contact__r.Withdrawal_reason__c , &quot;Unwell, but possible 2013 participant&quot;) , &quot;Sickness / injury&quot;,&quot;Other&quot;))))))))))))))</formula>
        <inlineHelpText>Formula, translating withdrawal reasons (from Contact) into NCS-specified withdrawal reasons</inlineHelpText>
        <label>NCS withdrawal reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_NCS_YP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-NCS YP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_payment_field__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.Account.Date_of_first_payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old payment field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_provider_ID__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.School__r.NCS_Provider_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original provider ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Disability_Need_Med_condition__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Disability/Need/Med condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Email__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Parent_Email__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Facebook_name__c</fullName>
        <label>PG Facebook name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>